--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.8.4",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
+    "vue-gtag": "^2.1.2",
+    "vue-gtag-next": "^1.14.0",
     "vuetify": "^3.6.14"
   },
   "devDependencies": {
