--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdi/font": "7.4.47",
     "axios": "^1.8.4",
+    "lodash": "^4.17.21",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vue-gtag": "^2.1.2",
